# probfindiff

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yaml  notebooks.yaml  pypi-publish.yaml  tox.yaml
docs/: make.bat  requirements-sphinx-build.txt
docs/notebooks/getting_started/: basics.ipynb
docs/source/: conf.py  index.rst
docs/source/docs_api/: pnfindiff.rst  pnfindiff.utils.kernel_zoo.rst  pnfindiff.utils.rst  probfindiff.rst  probnum_findiff.rst
docs/source/docs_api/pnfindiff/: coefficients.rst  coefficients_1d.rst  collocation.rst  schemes.rst  schemes_1d.rst  utils.rst
docs/source/docs_api/pnfindiff/utils/: autodiff.rst  kernel.rst  kernel_zoo.rst
docs/source/docs_api/probfindiff/: collocation.rst  stencil.rst  utils.rst
docs/source/docs_api/probfindiff/utils/: autodiff.rst  kernel.rst  kernel_zoo.rst
docs/source/docs_api/probnum_findiff/: collocation.rst  utils.rst
docs/source/docs_api/probnum_findiff/utils/: autodiff.rst  kernel.rst  kernel_zoo.rst
docs/source/docs_dev/: contribution_guide.md  examples.md
docs/source/getting_started/: installation.md  quickstart.ipynb
docs/source/notebooks/: calibration.ipynb  custom_grid.ipynb  noisy_schemes.ipynb  partial_derivatives.ipynb
docs/source/notebooks/getting_started/: basics.ipynb  batched_evaluations.ipynb  batched_evaluations.nbconvert.ipynb  calibration.ipynb  custom_grid.ipynb  custom_grid.nbconvert.ipynb  kernel_models.ipynb  kernel_models.nbconvert.ipynb  multivariate_derivatives.ipynb  multivariate_derivatives.nbconvert.ipynb  noisy_schemes.ipynb  noisy_schemes.nbconvert.ipynb  partial_derivatives.ipynb  partial_derivatives.nbconvert.ipynb  quickstart.ipynb  quickstart.nbconvert.ipynb
src/pnfindiff/: __init__.py  _api.py  _coefficients.py  _toplevel_api.py  coefficients.py  coefficients_1d.py  collocation.py  diffops.py  kernel.py  schemes.py  schemes_1d.py  typing.py
src/pnfindiff/aux/: collocation.py  diffop.py  diffops.py  kernel.py
src/pnfindiff/utils/: autodiff.py  kernel.py  kernel_zoo.py
src/probfindiff/: __init__.py  _toplevel_api.py  collocation.py  defaults.py  nd.py  stencil.py  typing.py
src/probfindiff/backend/: typing.py
src/probfindiff/utils/: __init__.py  autodiff.py  kernel.py  kernel_zoo.py
src/probnum_findiff/: _toplevel_api.py  collocation.py
src/probnum_findiff/utils/: autodiff.py  kernel.py  kernel_zoo.py
tests/: test_api.py  test_coefficients.py  test_coefficients_1d.py  test_collocation.py  test_diffops.py  test_kernel.py  test_nd.py  test_schemes.py  test_schemes_1d.py  test_stencil.py  test_toplevel_api.py
tests/test_aux/: test_collocation.py  test_diffop.py  test_diffops.py  test_kernel.py
tests/test_base/: test_diffops.py  test_kernel.py
tests/test_utils/: test_autodiff.py  test_collocation.py  test_diffop.py  test_kernel.py
