[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """

[tox]
envlist = pytest, black, isort, pylint, mypy, docs
isolated_build = True

[testenv]
description = Executing tests with pytest
deps =
    pytest
    pytest-cases
commands =
    pip install --upgrade pytest
    pytest --verbose {posargs}

[testenv:black]
description = Code linting with Black
deps = black[jupyter]
commands =
    pip install --upgrade black
    black --check --diff .

[testenv:isort]
description = Sorting imports with isort
deps = isort
commands =
    pip install --upgrade isort
    isort --profile black --check --diff .

[testenv:pylint]
description = Linting (pylint)
deps = pylint
ignore_errors = true
commands =
    pip install --upgrade pylint
    pylint src --jobs=0
    pylint tests --jobs=0 --disable="missing-function-docstring"

[testenv:mypy]
description = Type checking
deps = mypy
ignore_errors = true
commands =
    mypy --strict src

[testenv:docs]
description = Build the HTML docs
passenv = HOME
deps =
    -r {toxinidir}/docs/requirements-sphinx-build.txt
    sphinx-autodoc-typehints  # hack. No idea why necessary
changedir = docs
whitelist_externals = make
commands =
         make clean
         make html SPHINXOPTS="-W --keep-going"
"""

# Configuration of the black code style checker
# For more information about Black's usage of this file, see
# https://github.com/psf/black#pyprojecttoml
[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "true"
force_grid_wrap = "0"
use_parentheses = "true"
line_length = "88"



# Pylint configuration

[tool.pylint.master]
load-plugins = [
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
]


[tool.pylint.messages_control]
disable = [
    # Exceptions suggested by Black:
    # https://github.com/psf/black/blob/7f75fe3669ebf0627b1b0476a6d02047e909b959/docs/compatible_configs.md#black-compatible-configurations
    "bad-continuation",
    "bad-whitespace",
    # Specific ignores
    "invalid-name",  # we name things the way we want.
    "line-too-long",  # black takes care of linebreaks itself. Long docs dont really matter.
    "import-error",  # caught by the tests, not by pylint.
]

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
addopts = [
    "--verbose",
    "--doctest-modules",
]
norecursedirs = [
    ".*",
    "*.egg*",
    "dist",
    "build",
    ".tox"
]
testpaths = [
    "src/probfindiff",
    "tests"
]
doctest_optionflags = "NUMBER NORMALIZE_WHITESPACE"
filterwarnings = [
    # "import jax" implies "import flatbuffers", which raises the following warning.
    # Ignore similar to https://github.com/google/jax/blob/main/pytest.ini
    "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning:flatbuffers.*"
]


[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
