[metadata]
name = pnfindiff
description = Probabilistic numerical finite differences
author = Nicholas Krämer
author_email = nicholas.kraemer@uni-tuebingen.de
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    jax
    jaxlib
python_requires = >=3.8
package_dir =
    =src


[options.packages.find]
where = src
exclude =
    tests


[options.extras_require]
ci =
    tox
docs =
    jupyter
